css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}


@media only screen and (min-width: 60em){
    html {
        font-size: 110%;
    }
}

@media only screen and (min-width: 90em){
    html {
        font-size: 120%;
    }
}

@media only screen and (min-width: 120em){
    html {
        font-size: 130%;
    }
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  padding: 0;
}

img {
  display: block;
  width: 100%;
}

.header{
  margin: 0;
  padding: 0;
  background-color: #d0d0d0;
  overflow: hidden;
}

.footer{
  margin: 0;
  padding: 0;
  background-color: #d0d0d0;
  overflow: hidden;
}

.lightgrey {
background-color: #e2e2e2;
}

.lightergrey {
background-color: #efefef;
}
    
.nav {
  padding: 0;
  list-style-type: none; 
}

.nav a {
  text-decoration: none;
  color: #0074D9;
    display:block;
}

.nav a:hover {
background-color: #0074D9;
color: white;
}

.title {
  text-align: center;
  margin: 0; 
}

.quote{
background-color: #e2e2e2;
text-align: center;
}


@media only screen and (min-width: 25em) {
 
.nav li { 
  display: inline-block;
 }

.nav{
  text-align: center;
}
    
.navcopyright{
text-align: center;
}
}

@media only screen and (min-width: 38em) {
.title {
  text-align: left;   
}

.footernav{
float: right;
}


.nav {
  text-align: left;
}

.navcopyright{
text-align: left;
}

@media only screen and (min-width: 60em){
}

